# ecs

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
ecs/: CMakeLists.txt  common.h  component.cpp  component.h  ecs.h  entity.cpp  entity.h  registry.cpp  registry.h  system.h
tests/: CMakeLists.txt  tests.cpp
